force-app/main/default/objects/InteractionSummary/fields/Date_of_Next_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Meeting__c</fullName>
    <description>SFP-10974 [c] Date of Next Meeting</description>
    <label>Date of Next Meeting</label>
    <type>Date</type>
</CustomField>