force-app/main/default/objects/InteractionSummary/fields/Entertainment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Cost__c</fullName>
    <description>SFP-10974 [c] Entertainment Cost</description>
    <label>Entertainment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>