force-app/main/default/objects/InteractionSummary/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>SFP-10974 [c] Objectives of the Engagement.</description>
    <label>Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>