force-app/main/default/objects/InteractionSummary/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <description>SFP-10974 [c] Results of the Engagement</description>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>