force-app/main/default/objects/InteractionSummary/fields/Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Distance__c</fullName>
    <description>SFP-10974 [c] Distance travelled to meet the client</description>
    <label>Travel Distance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>