force-app/main/default/objects/InteractionSummary/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>SFP-10974 [c]	Place where meeting took place</description>
    <label>Venue</label>
    <type>TextArea</type>
</CustomField>