force-app/main/default/objects/InteractionSummary/listViews/My_Team_s_Interaction_Summaries_Week_Ago.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Interaction_Summaries_Week_Ago</fullName>
    <columns>Name</columns>
    <columns>InteractionPurpose</columns>
    <columns>Account</columns>
    <columns>Interaction</columns>
    <columns>ConfidentialityType</columns>
    <columns>Contact__c</columns>
    <columns>Date_of_Next_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Team&apos;s Interaction Summaries_Week Ago</label>
    <sharedTo>
        <roleAndSubordinatesInternal>BCC_AR_Uganda</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>